--- a/index.html
+++ b/index.html
@@ -2,20 +2,26 @@
 <html lang="en"
      <head>
          <title>Chevuru Corporation</title>
-         <link rel="stlesheet" href="css/style.css">
+         <link rel="stylesheet" href="css/style.css">
          <meta charset="utf-8">
          <meta name="author" content="Lucas Chevuru">
          <meta name="description" content="Lucas Chevuru owns Chevuru Corporation">
          <meta name="keywords" content="Corporations, Chevuru">
      </head>
-
+ 
      <body>
      <header>
-        <h1>Welcome to Chevuru Corporation</h1>
+        <h1 style="Color: Blue;>">Welcome to Chevuru Corporation</h1>
         <nav>
+            <h2>Navigation</h2>
+            <ol>
+                <li><a href="https://unsplash.com/s/photos/car">Car Photos</a></li>
+                <li><a href="https://www.istockphoto.com/photos/car-engine">Engine Photos</a></li>
+                <li><a href="https://www.istockphoto.com/photos/car-paint-job">Paint Job Photos</a></li>
+            </ol>
         </nav>
      </header>
-
+ 
      <article>
         <header>
             <h2>What we are about</h2>
@@ -36,13 +42,13 @@
                 <p>Go to Ferrari, visit <a href="https://www.ferrari.com/en-US">Ferrari.</a></p>
                 <p>Go to Bugatti, visit <a href="https://www.bugatti.com/">Bugatti.</a></p>
                 <p>Go to Jaguar, visit <a href="https://www.jaguarusa.com/index.html">Jaguar.</a></p>
-
-
+ 
+ 
             
             <h3>Fixing anything from paint to parts</h3>
             </header>
         </section>
-
+ 
         <section>
             <header>
                 <h2>We even change your engines</h2>
@@ -53,7 +59,7 @@
             </header>
         </section>
      </article>
-
+ 
      <footer>
         <address>
         </address>
