--- a/index.html
+++ b/index.html
@@ -47,12 +47,20 @@
         </section>
 
         <section>
-            <h2>We even change your engines</h2>
-            <h3>Here is a video of a new V8 engine we put in</h3>
+            <h4>We even change your engines</h4>
+            <h5>Here is a video of a new V8 engine we put in</h5>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TPOCWlI4NCc?si=RFYU9yzkF-gekood"
-                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe 
+            width="560" 
+            height="315" 
+            src="https://www.youtube.com/embed/TPOCWlI4NCc?si=RFYU9yzkF-gekood"
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+            style="border: none;">
+          </iframe>          
+          
         </section>
     </article>
 
