--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <head>
     <title>Chevuru Corporation</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        html {
+            font-family: "Arial", sans-serif;
+            font: size 1rem;
+            background: radial-gradient(farthest-side at left bottom, yellow 50px, red);
+        
+        }
+
+        h2 {
+            text-transform:uppercase;
+        }
+    </style>
     <meta charset="utf-8">
     <meta name="author" content="Lucas Chevuru">
     <meta name="description" content="Lucas Chevuru owns Chevuru Corporation">
